working on paypal integrations

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ client_secret_293064886825-eb1j0jspkb37ore4kdrcgilvcggkfho2.apps.googleuserconte
 */__pycache__
 users/migrations/__pycache__
 cases/migrations/__pycache__
+media
+client_secret_290053304181-fd48j6ollj2s8eae2ckmsp1j3bn96s7e.apps.googleusercontent.com.json
+token.json
