--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ cases/migrations/__pycache__
 media
 client_secret_290053304181-fd48j6ollj2s8eae2ckmsp1j3bn96s7e.apps.googleusercontent.com.json
 token.json
+files.zip
