--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.8.1
 cachetools==5.5.2
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
+cryptography==44.0.2
 Django==5.1.7
 django-cors-headers==4.7.0
+django-filter==25.1
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
 google-api-core==2.24.2
@@ -14,18 +17,28 @@ google-auth-oauthlib==1.2.1
 googleapis-common-protos==1.69.2
 httplib2==0.22.0
 idna==3.10
+lxml==5.3.1
+oauth2client==4.1.3
 oauthlib==3.2.2
+paypalrestsdk==1.13.3
 proto-plus==1.26.1
 protobuf==6.30.1
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pycparser==2.22
+PyDrive==1.3.1
 PyJWT==2.9.0
+pyOpenSSL==25.0.0
 pyparsing==3.2.3
+python-docx==1.1.2
 python-dotenv==1.1.0
+PyYAML==6.0.2
 requests==2.32.3
 requests-oauthlib==2.0.0
 rsa==4.9
+six==1.17.0
 sqlparse==0.5.3
+typing_extensions==4.13.0
 uritemplate==4.1.1
 urllib3==2.3.0
